game functionally working, need to update css and make more modern looking. Need to address next shape not showing the correct color.

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,7 @@
 .App {
   --col-side: calc(var(--tile-size) * 4);
   --col-center: calc(var(--tile-size) * 10);
-  --grid-height: calc(var(--tile-size) * 18);
-
+  /* --grid-height: calc(var(--tile-size) * 18); */
   width: calc(var(--tile-size) * (4 + 1 + 10 + 1 + 4));
   margin: auto;
   display: grid;
