--- a/src/components/grid-square/grid-square.style.scss
+++ b/src/components/grid-square/grid-square.style.scss
@@ -1,5 +1,5 @@
 :root {
-    --bg-color: rgba(150, 150, 150, 1);
+    //--bg-color: rgba(150, 150, 150, 1);
   
     /* Border Colors are all transparent colors. These will tint or shade the background color of the square. */
     --border-left-color: rgba(255, 255, 255, 0.20);
@@ -8,7 +8,7 @@
     --border-bottom-color: rgba(0, 0, 0, 0.5);
   
     /* Square Colors:  background colors for the squares.*/
-    --color-0: #eaeaea;
+    --color-0: #000000;
     --color-1: #ff6600;
     --color-2: #eec900;
     --color-3: #0000ff;
@@ -27,8 +27,8 @@
     --tile-size: 20px for example will set size of the grid squares. */
     --cols: 10;
     --rows: 18;
-    --tile-size: 20px;
-    --border-width: 5px;
+    --tile-size: 50px;
+    --border-width: 1px;
   }
   
   /* Colors */
